# ncurses-tutorial

./: .gitignore  CMakeLists.txt  README.org  configure.sh  run.sh
c/: CMakeLists.txt  run_test.sh
c/src/: main.c  main_test.c
hare/: run.sh
hare/src/: main.ha  popup_menu_example.ha  popup_window_example.ha  snake_game.ha  typing_example.ha  window_border_example.ha
hare/src/nc/: README  color_and_attribute.ha  cursor.ha  input.ha  nc.ha  popup_menu.ha  popup_window.ha  window.ha  window_border.ha
hare/src/nc/+freebsd/: locale.ha
hare/src/nc/+linux/: locale.ha
src/: color.c  color.h  main.c  ncurses-demo
src/multi-threading/: copying_machine.h  copying_machine_test.c
zig/: build.zig  create_example_build.zig
zig/src/: main.zig  nc.zig  snake_game.zig  typing_example.zig  window_border_example.zig
zig/src/nc/: common.zig
